--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             <div class="carousel slide" data-bs-ride="carousel" id="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="3000">
-                        <img src="./images/slides/slide1.png" alt="Foto empanadas">
+                        <img src="./slide1.png" alt="Foto empanadas">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="./images/slides/slide2.png" alt="Foto empanadas">
+                        <img src="./slide2.png" alt="Foto empanadas">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="./images/slides/slide3.png" alt="Foto empanadas">
+                        <img src="./slide3.png" alt="Foto empanadas">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -78,7 +78,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-5">
-                            <img src="./images/empanadas.jpg" class="d-block w-100 rounded" alt="Foto empanadas">
+                            <img src="./empanadas.jpg" class="d-block w-100 rounded" alt="Foto empanadas">
                         </div>
                         <div class="col-md-7 mt-3 mt-md-0">
                             <h2 class="section-title">Sobre <span class="text-colored">a Latinas!</span></h2>
@@ -102,21 +102,21 @@
                 </div>
                 <div class="row mt-4">
                     <div class="col-md-4">
-                        <img src="./images/eventos/deliciosa.jpg" alt="Deliciosas" class="d-block w-100 rounded mb-2">
+                        <img src="./deliciosa.jpg" alt="Deliciosas" class="d-block w-100 rounded mb-2">
                         <h3 class="section-title text-colored fs-4">
                             Deliciosas!
                         </h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi explicabo consequatur repellendus laudantium ipsum doloribus eaque a deserunt accusantium quibusdam eius, pariatur assumenda laborum qui temporibus quos, possimus at aperiam!</p>
                     </div>
                     <div class="col-md-4">
-                        <img src="./images/eventos/ingredientes.jpg" alt="Ingredientes" class="d-block w-100 rounded mb-2">
+                        <img src="./ingredientes.jpg" alt="Ingredientes" class="d-block w-100 rounded mb-2">
                         <h3 class="section-title text-colored fs-4">
                             Ingredientes de qualidade!
                         </h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi explicabo consequatur repellendus laudantium ipsum doloribus eaque a deserunt accusantium quibusdam eius, pariatur assumenda laborum qui temporibus quos, possimus at aperiam!</p>
                     </div>
                     <div class="col-md-4">
-                        <img src="./images/eventos/recheada.jpg" alt="Recheadíssima" class="d-block w-100 rounded mb-2">
+                        <img src="./recheada.jpg" alt="Recheadíssima" class="d-block w-100 rounded mb-2">
                         <h3 class="section-title text-colored fs-4">
                             A mais recheada!
                         </h3>
@@ -143,14 +143,14 @@
                             <div class="tab-pane active" id="bebidas">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./images/cardapio/bebidas/coca-cola.jpg" alt="Coca-cola"/>
+                                        <img class="d-block w-100" src="./coca-cola.jpg" alt="Coca-cola"/>
                                         <h5 class="text-colored fw-bold mt-2">Coca-cola</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./images/cardapio/bebidas/suco.jpg" alt="Suco de Laranja"/>
+                                        <img class="d-block w-100" src="./suco.jpg" alt="Suco de Laranja"/>
                                         <h5 class="text-colored fw-bold mt-2">Suco de Laranja</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
@@ -161,42 +161,42 @@
                             <div class="tab-pane" id="empanadas-cardapio">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./images/cardapio/empanadas/empanada-carne" alt="Empanada de Carne"/>
+                                        <img class="d-block w-100" src="./empanada-carne" alt="Empanada de Carne"/>
                                         <h5 class="text-colored fw-bold mt-2">Empanada de Carne</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./images/cardapio/empanadas/empanada-espinafre-ricota.jpg" alt="Empanada de Espinafre com Ricota"/>
+                                        <img class="d-block w-100" src="./empanada-espinafre-ricota.jpg" alt="Empanada de Espinafre com Ricota"/>
                                         <h5 class="text-colored fw-bold mt-2">Empanada de Espinafre com Ricota</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./images/cardapio/empanadas/empanada-frango.jpeg" alt="Empanada de Frango"/>
+                                        <img class="d-block w-100" src="./empanada-frango.jpeg" alt="Empanada de Frango"/>
                                         <h5 class="text-colored fw-bold mt-2">Empanada de Frango</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./images/cardapio/empanadas/empanada-palmito.jpg" alt="Empanada de Palmito"/>
+                                        <img class="d-block w-100" src="./empanada-palmito.jpg" alt="Empanada de Palmito"/>
                                         <h5 class="text-colored fw-bold mt-2">Empanada de Palmito</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./images/cardapio/empanadas/empanada-polvo.jpg" alt="Empanada de Polvo"/>
+                                        <img class="d-block w-100" src="./empanada-polvo.jpg" alt="Empanada de Polvo"/>
                                         <h5 class="text-colored fw-bold mt-2">Empanada de Polvo</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./images/cardapio/empanadas/empanada-presunto-queijo.webp" alt="Empanada de Presunto e Queijo"/>
+                                        <img class="d-block w-100" src="./empanada-presunto-queijo.webp" alt="Empanada de Presunto e Queijo"/>
                                         <h5 class="text-colored fw-bold mt-2">Empanada de Presunto e Queijo</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
@@ -207,14 +207,14 @@
                             <div class="tab-pane" id="sobremesas">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./images/cardapio/sobremesas/bolo.jpg" alt="Bolo de chocolate"/>
+                                        <img class="d-block w-100" src="./bolo.jpg" alt="Bolo de chocolate"/>
                                         <h5 class="text-colored fw-bold mt-2">Bolo de Chocolate</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./images/cardapio/sobremesas/cupcake.jpg" alt="Cupcake"/>
+                                        <img class="d-block w-100" src="./cupcake.jpg" alt="Cupcake"/>
                                         <h5 class="text-colored fw-bold mt-2">Cupcake</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
