--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                 <div class="row">
                     <aside class="col-md-2">
                         <nav class="nav nav-pills flex-column nav-cardapio">
-                            <button type="button" data-bs-toggle="tab" data-bs-target="#bebidas" class="fw-bold text-start nav-link text-colored active">Bebidas não alcóolicas</button>
-                            <button type="button" data-bs-toggle="tab" data-bs-target="#empanadas-cardapio" class="fw-bold text-start nav-link text-colored">Pratos principais</button>
+                            <button type="button" data-bs-toggle="tab" data-bs-target="#bebidas" class="fw-bold text-start nav-link text-colored active">Bebidas</button>
+                            <button type="button" data-bs-toggle="tab" data-bs-target="#empanadas-cardapio" class="fw-bold text-start nav-link text-colored">Empanadas</button>
                             <button type="button" data-bs-toggle="tab" data-bs-target="#sobremesas" class="fw-bold text-start nav-link text-colored">Sobremesas</button>
                         </nav>
                     </aside>
