--- a/index.html
+++ b/index.html
@@ -135,7 +135,6 @@
                         <nav class="nav nav-pills flex-column nav-cardapio">
                             <button type="button" data-bs-toggle="tab" data-bs-target="#bebidas" class="fw-bold text-start nav-link text-colored active">Bebidas</button>
                             <button type="button" data-bs-toggle="tab" data-bs-target="#empanadas-cardapio" class="fw-bold text-start nav-link text-colored">Empanadas</button>
-                            <button type="button" data-bs-toggle="tab" data-bs-target="#sobremesas" class="fw-bold text-start nav-link text-colored">Sobremesas</button>
                         </nav>
                     </aside>
                     <div class="col-md-10">
@@ -143,14 +142,14 @@
                             <div class="tab-pane active" id="bebidas">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./coca-cola.jpg" alt="Coca-cola"/>
+                                        <img class="d-block w-100 menu-image" src="./coca-cola.jpg" alt="Coca-cola"/>
                                         <h5 class="text-colored fw-bold mt-2">Coca-cola</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./suco.jpg" alt="Suco de Laranja"/>
+                                        <img class="d-block w-100 menu-image" src="./suco.jpg" alt="Suco de Laranja"/>
                                         <h5 class="text-colored fw-bold mt-2">Suco de Laranja</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
@@ -161,61 +160,43 @@
                             <div class="tab-pane" id="empanadas-cardapio">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./empanada-carne" alt="Empanada de Carne"/>
+                                        <img class="d-block w-100 menu-image" src="./empanada-carne" alt="Empanada de Carne"/>
                                         <h5 class="text-colored fw-bold mt-2">Empanada de Carne</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./empanada-espinafre-ricota.jpg" alt="Empanada de Espinafre com Ricota"/>
+                                        <img class="d-block w-100 menu-image" src="./empanada-espinafre-ricota.jpg" alt="Empanada de Espinafre com Ricota"/>
                                         <h5 class="text-colored fw-bold mt-2">Empanada de Espinafre com Ricota</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./empanada-frango.jpeg" alt="Empanada de Frango"/>
+                                        <img class="d-block w-100 menu-image" src="./empanada-frango.jpeg" alt="Empanada de Frango"/>
                                         <h5 class="text-colored fw-bold mt-2">Empanada de Frango</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./empanada-palmito.jpg" alt="Empanada de Palmito"/>
+                                        <img class="d-block w-100 menu-image" src="./empanada-palmito.jpg" alt="Empanada de Palmito"/>
                                         <h5 class="text-colored fw-bold mt-2">Empanada de Palmito</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./empanada-polvo.jpg" alt="Empanada de Polvo"/>
+                                        <img class="d-block w-100 menu-image" src="./empanada-polvo.jpg" alt="Empanada de Polvo"/>
                                         <h5 class="text-colored fw-bold mt-2">Empanada de Polvo</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="d-block w-100" src="./empanada-presunto-queijo.webp" alt="Empanada de Presunto e Queijo"/>
+                                        <img class="d-block w-100 menu-image" src="./empanada-presunto-queijo.webp" alt="Empanada de Presunto e Queijo"/>
                                         <h5 class="text-colored fw-bold mt-2">Empanada de Presunto e Queijo</h5>
-                                        <p>
-                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tab-pane" id="sobremesas">
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        <img class="d-block w-100" src="./bolo.jpg" alt="Bolo de chocolate"/>
-                                        <h5 class="text-colored fw-bold mt-2">Bolo de Chocolate</h5>
-                                        <p>
-                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
-                                        </p>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <img class="d-block w-100" src="./cupcake.jpg" alt="Cupcake"/>
-                                        <h5 class="text-colored fw-bold mt-2">Cupcake</h5>
                                         <p>
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit.s
                                         </p>
